--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -1,4 +1,13 @@
 <p>This is the partial for view 2.</p>
-<p>
+<p class="view2">
   Showing of 'interpolate' filter:
+  {{ 'Current version is v%VERSION%.' | interpolate }}
 </p>
+
+<button type="button" class="btn btn-default btn-lg">
+  <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star
+</button>
+
+<img src="img/webpack.png" />
+
+<div class="lazyload2"></div>
